--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.gfabre.android.o3"
         minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 308
-        versionName "3.08"
+        targetSdkVersion 32
+        versionCode 309
+        versionName "3.09"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    lintOptions {
-        abortOnError false
     }
     buildTypes {
         release {
@@ -21,10 +18,12 @@ android {
     }
     productFlavors {
     }
-    buildToolsVersion = '28.0.3'
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+    lint {
+        abortOnError false
     }
 }
 
@@ -32,6 +31,6 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation files('libs/java-cup-11b-runtime.jar')
 }
